@@ -2,7 +2,7 @@
   <description>
     Provide global statistics for a given study.
   </description>
-  <command interpreter="python2.7">
+  <command interpreter="python">
     kb_query.py
     #if $advanced_configuration.configuration_level == 'advanced'
       --host=$advanced_configuration.vl_host
@@ -15,7 +15,7 @@
     #end if
     --operator=galaxy
     --ofile=${output1}
-    --loglevel=WARNING
+    --loglevel=$__app__.config.vl_loglevel
     --logfile=${logfile}
     global_stats
     #if str($study) != 'all_known_studies'
